Input 0 to scale in redo panel resets to 1 #81480

Closed
opened 2020-10-06 10:29:24 +02:00 by Vlad Kuzmin · 12 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.38

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-10-05 21:23, hash: 3178dc25f6
Worked: (newest version of Blender that worked as expected)

Short description of error
2.91 alpha - Input 0 (zero) to numeric editing field ignoring or resetting to 1.0

Exact steps for others to reproduce the error
Numeric scale, rotation, moving, UV vertices, etc. If required input 0.0 value, for example to "scale" all vertices in one line with Scale Z = 0.0 now required enter 0.00000000000000000000001 or as minimal as possible float value otherwise field will reset to 1.0 (Scale) or just ignore and show last value.
Selecting all three input fields, and enter 0 work as expecting in Scale.

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.38 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-10-05 21:23, hash: `3178dc25f6` Worked: (newest version of Blender that worked as expected) **Short description of error** 2.91 alpha - Input 0 (zero) to numeric editing field ignoring or resetting to 1.0 **Exact steps for others to reproduce the error** Numeric scale, rotation, moving, UV vertices, etc. If required input 0.0 value, for example to "scale" all vertices in one line with Scale Z = 0.0 now required enter 0.00000000000000000000001 or as minimal as possible float value otherwise field will reset to 1.0 (Scale) or just ignore and show last value. Selecting all three input fields, and enter 0 work as expecting in Scale.
Author

Added subscriber: @ssh4

Added subscriber: @ssh4

Added subscriber: @rjg

Added subscriber: @rjg

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This seems to only affect the Adjust Last Operation panel. Adjusting other properties in the UI or setting the properties of the operator when using a shortcut still appears to work as expected (e.g. {key S} + {key Z} + {key 0}).

This seems to only affect the *Adjust Last Operation* panel. Adjusting other properties in the UI or setting the properties of the operator when using a shortcut still appears to work as expected (e.g. {key S} + {key Z} + {key 0}).
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

@ssh4 Did you try a recent Blender version that did work? The "Worked" field is very helpful for trying to track down these kinds of bugs.

@ssh4 Did you try a recent Blender version that did work? The "Worked" field is very helpful for trying to track down these kinds of bugs.
Author

In #81480#1029158, @HooglyBoogly wrote:
@ssh4 Did you try a recent Blender version that did work? The "Worked" field is very helpful for trying to track down these kinds of bugs.

Sorry, was in rush.
2.91.0 from
2020/09/24 was worked.

2020/09/28 not working
2020/10/2 not working

> In #81480#1029158, @HooglyBoogly wrote: > @ssh4 Did you try a recent Blender version that did work? The "Worked" field is very helpful for trying to track down these kinds of bugs. Sorry, was in rush. 2.91.0 from 2020/09/24 was worked. 2020/09/28 not working 2020/10/2 not working
Member

Interesting, I didn't find that the build from the 24th worked in my test. I actually traced the difference down to 2.83 vs 2.90. Unfortunately this makes bisecting a little more difficult, I may still try though.
Screencast from 10-07-2020 09:59:33 AM.webm

Interesting, I didn't find that the build from the 24th worked in my test. I actually traced the difference down to 2.83 vs 2.90. Unfortunately this makes bisecting a little more difficult, I may still try though. [Screencast from 10-07-2020 09:59:33 AM.webm](https://archive.blender.org/developer/F8964940/Screencast_from_10-07-2020_09_59_33_AM.webm)
Member

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Member

Alright, after a while bisecting I found that this is actually caused by b5eeef834f. From May 7!

I'm a little unsure how this bug lasted so long. So thanks for reporting it!

@mano-wii This may be for you : )
To reproduce, just select two vertices making up a vertical edge in the default cube. Then scale and adjust a value to 0 in the redo panel. I assume many other situations cause the same problem.

Alright, after a while bisecting I found that this is actually caused by b5eeef834f. From May 7! I'm a little unsure how this bug lasted so long. So thanks for reporting it! @mano-wii This may be for you : ) To reproduce, just select two vertices making up a vertical edge in the default cube. Then scale and adjust a value to 0 in the redo panel. I assume many other situations cause the same problem.
Hans Goudey changed title from 2.91 alpha - Input 0 (zero) to numeric editing field ignoring or resetting to 1.0 to Input 0 to scale in redo panel resets to 1 2020-10-07 17:55:11 +02:00
Germano Cavalcante self-assigned this 2020-10-07 19:29:22 +02:00

This issue was referenced by 833066088e

This issue was referenced by 833066088e4a68815dc6a31783546e200229e9f4

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81480
No description provided.