Fix T81480: Input 0 to scale in redo panel resets to 1

Checking if `t->values[i] != 0.0f;` is not the best solution for all
transform cases.