source/blender/editors/transform/transform_generics.c
@@ -479,9 +479,7 @@ void initTransInfo(bContext *C, TransInfo *t, wmOperator *op, const wmEvent *eve
       if (t_values_set_is_array) {
         /* For operators whose `t->values` is array, set constraint so that the
          * orientation is more intuitive in the Redo Panel. */
-        for (int i = 3; i--;) {
-          constraint_axis[i] |= t->values[i] != 0.0f;
-        }
+        constraint_axis[0] = constraint_axis[1] = constraint_axis[2] = true;
       }
       else if (use_orient_axis) {
         constraint_axis[t->orient_axis] = true;
